<resources>
    <string name="app_name">EasyRaceLapTimer</string>
    <string name="ranklabel">"# "</string>
    <string name="namelabel">"Pilot: "</string>
    <string name="lapcountlabel">"Lap "</string>
    <string name="avglaplabel">"Avg Time "</string>
    <string name="session_name">Session name :</string>
    <string name="application_logo">application logo</string>
    <string name="pos">#</string>
    <string name="hint_pos">pos</string>
    <string name="lapcount">lapcount</string>
    <string name="hint_avglap">avglap</string>
    <string name="sec">sec</string>
    <string name="hint_name">name</string>
    <string name="fastest_lap">Fastest_lap</string>
</resources>
