<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/ranklabel"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pos" />

    <TextView
        android:id="@+id/position"
        android:hint="@string/hint_pos"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ranklabel"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content" />


    <TextView
        android:id="@+id/lapcount"
        android:hint="@string/lapcount"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lapcountlabel"
        android:layout_alignLeft="@+id/lapcountlabel"
        android:layout_alignStart="@+id/lapcountlabel"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/avg_lap_totext"
        android:hint="@string/hint_avglap"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avglaplabel"
        android:layout_alignLeft="@+id/avglaplabel"
        android:layout_alignStart="@+id/avglaplabel"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/avglaplabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec"
        android:layout_alignBaseline="@+id/avg_lap_totext"
        android:layout_alignBottom="@+id/avg_lap_totext"
        android:layout_toRightOf="@+id/avg_lap_totext"
        android:layout_toEndOf="@+id/avg_lap_totext"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <TextView
        android:id="@+id/name"
        android:hint="@string/hint_name"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/namelabel"
        android:layout_toEndOf="@+id/namelabel"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/avglaplabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avglaplabel"
        android:layout_marginLeft="104dp"
        android:layout_marginStart="104dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/name"
        android:layout_toEndOf="@+id/name" />

    <TextView
        android:id="@+id/lapcountlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lapcountlabel"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_below="@+id/namelabel"
        android:layout_toLeftOf="@+id/name"
        android:layout_toStartOf="@+id/name" />

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namelabel"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/position"
        android:layout_toEndOf="@+id/position"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />


</RelativeLayout>